# vuln-prioritization-ml-

./: .gitignore  FINDINGS.md  README.md  environment.yml  governance.yaml  project.yaml  pyproject.toml
blog/: README.md  conference_abstract.md  discord_post.md  draft.md  linkedin_post.md  substack_intro.md
data/processed/: feature_cols.json  metadata.json
data/raw/nvd/: metadata.json
data/splits/: split_info.json
docs/: ADVERSARIAL_EVALUATION.md  ARTIFACT_MANIFEST_SPEC.md  CLAUDE_MD.md  CONFIGURATION_SPEC.md  DATA_CONTRACT.md  DECISION_LOG.md  ENVIRONMENT_CONTRACT.md  EXPERIMENT_CONTRACT.md  FIGURES_TABLES_CONTRACT.md  HYPOTHESIS_CONTRACT.md  HYPOTHESIS_REGISTRY.md  IMPLEMENTATION_PLAYBOOK.md  METRICS_CONTRACT.md  PRE_SUBMISSION_CHECKLIST.md  PROJECT_BRIEF.md  PUBLICATION_PIPELINE.md  REPORT_ASSEMBLY_PLAN.md  REPORT_CONSISTENCY_SPEC.md  REPRODUCIBILITY_SPEC.md  RISK_REGISTER.md  RUBRIC_TRACEABILITY.md  SCRIPT_ENTRYPOINTS_SPEC.md  TEST_ARCHITECTURE.md
outputs/provenance/: config_resolved.yaml  git_info.txt  versions.txt
scripts/: adversarial_eval.py  ingest_nvd.py  run_explainability.py  train_baselines.py  train_models.py
tests/: test_data_integrity.py  test_scripts.py
